[package]
name = "yunpian-sdk"
version = "0.1.0"
edition = "2021"
description = "云片短信sdk"
license = "MIT OR Apache-2.0"
authors = ["annidie"]
documentation = "https://docs.rs/yunpian-sdk"
repository = "https://github.com/annidiea/yunpian-rust-sdk"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0.130", features = ["derive"]}
tokio = { version = "1", features = ["full"] }